<resources>
    <string name="app_name">Healthy Heart</string>

    <string name="item_1">First Item</string>
    <string name="item_2">Second Item</string>
    <string name="cd_logo">logo</string>
    <string name="open">open navigation drawer</string>
    <string name="close">close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="basic_first_aid"><b>Basic First Aid</b></string>
    <string name="animal_bites_treatment"><u>Animal Bites Treatment</u></string>
    <string name="cuts_and_wounds"><u>Cuts And Wounds</u></string>
    <string name="diarrhea_treatment"><u>Diarrhea Treatment</u></string>
    <string name="insect_sting"><u>Insect Sting</u></string>
    <string name="thermal_burn"><u>Thermal Burn</u></string>
    <string name="treating_fever_in_chindren"><u> Treating Fever In Children</u></string>
    <string name="vaccine_needs_according_to_age"><b>Vaccine needs according to age</b></string>
    <string name="vaccine_chart">This image contains vaccine chart</string>
    <string name="welcome_to_healthy_heart">Welcome to Healthy Heart</string>
    <string name="healthy_heart_provides_scheduling_and_data_related_to_users">Healthy Heart provides scheduling and data related to users</string>
    <string name="healthy_heart">Healthy Heart</string>
    <string name="new_logo">new_logo</string>
    <string name="healthy_heart_launcher"><b>HEALTHY HEART</b></string>
    <string name="for_every">For every</string>
    <string name="_5">5</string>
    <string name="title_for_your_reminder">Enter title for your reminder</string>
    <string name="title">Title</string>
    <string name="done">done</string>
    <string name="hours">hours</string>
    <string name="morning">Morning</string>
    <string name="_8_00">8:00</string>
    <string name="afternoon">Afternoon</string>
    <string name="_13_00">13:00</string>
    <string name="evening">Evening</string>
    <string name="_20_00">20:00</string>
    <string name="night">Night</string>
    <string name="_21_00">21:00</string>
    <string name="articles">Articles</string>
    <string name="for_doctors">For Doctors</string>
    <string name="brand_to_generic">Brand to generic</string>
    <string name="medicine_price">Medicine Price And Info</string>
    <string name="search_medicine">Search Medicine</string>
    <string name="vaccine">Vaccine</string>
    <string name="diet_chart">Diet Chart</string>
    <string name="common_disease">Common Disease</string>
    <string name="schedule">Schedule</string>
    <string name="bmi">BMI</string>
    <string name="first_aid">First Aid</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="daily">Daily</string>
    <string name="medicine_information">medicine information</string>
    <string name="symptom_checker">Symptom Checker</string>
    <string name="user">User</string>
    <string name="prevention">Prevention</string>
    <string name="hello_user">Hello user !!</string>
    <string name="about">About</string>
</resources>
