<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


  <item android:title="@string/category">
    <menu>


      <item
        android:id="@+id/home_icon"
        android:icon="@drawable/home"
        android:title="@string/home" />

      <item
          android:id="@+id/first_aid"
          android:icon="@drawable/firstaid"
          android:title="@string/first_aid" />
      <item
          android:id="@+id/bmi"
          android:icon="@drawable/bmi"
          android:title="@string/bmi" />
      <item
          android:id="@+id/schedule"
          android:icon="@drawable/schedule"
          android:title="@string/schedule" />
      <!--<item-->
          <!--android:id="@+id/reminder"-->
          <!--android:icon="@drawable/reminder"-->
          <!--android:title="Medicine Reminder" />-->
      <item
          android:id="@+id/common_disease"
          android:icon="@drawable/commondis"
          android:title="@string/common_disease" />
      <item
          android:id="@+id/diet_chart"
          android:icon="@drawable/diet"
          android:title="@string/diet_chart" />

      <item
          android:id="@+id/vaccine"
          android:icon="@drawable/vaccine"
          android:title="@string/vaccine" />

    </menu>
  </item>
    <item android:title="@string/search_medicine">
        <menu>
            <item
                android:id="@+id/medicine_price"
                android:icon="@drawable/price"
                android:title="@string/medicine_price" />

            <item
                android:id="@+id/brand_generic"
                android:icon="@drawable/sodium"
                android:title="@string/brand_to_generic" />
        </menu>
    </item>

    <item android:title="For Doctors">
        <menu>
            <item
                android:id="@+id/article"
                android:icon="@drawable/article"
                android:title="@string/articles" />
        </menu>
    </item>

</menu>
